fix: make stage header text align center

--- a/app/pages/Test/test.scss
+++ b/app/pages/Test/test.scss
@@ -44,6 +44,7 @@
                     justify-content: center;
                     opacity: 0.5;
                     cursor: pointer;
+                    text-align: center;
 
                     &.active {
                         cursor: default;
